--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> JazzTeam </title>
-    <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
-<body onload="animateH1()">
+<body>
     <div class="page">
        <header>
-        <h3 class="header2">Join us!</h3>
-        <h1 class="header1">Choose a club</h1>
+        <h3 class="header">Join us!</h3>
+        <h1 class="main-header">Choose a club</h1>
         </header>
         <main>
             <section class="main" id="par1">
@@ -25,5 +24,6 @@
             </section>
         </main>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
