--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </header>
         <main>
             <section class="main" id="par1">
-                <img class="img1" src="https://s3-alpha-sig.figma.com/img/52c8/550e/00c255479bc99a949db1a8c71e58b038?Expires=1719187200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=q1zx9wcgLdx0AzQP3aS7JXcbXapdwQwkGHyW5iWVqHjr8q7HVx6vvbdiSLVOQDhE0ap7ZE3MWvHlvOjDr~~dNONmgHGBdcx4MJb1EpOh3obs86uu6JCk9Zlvuf-D0VsHM138OrVCmDblWOIXwx2IjngV908dMlyxvRL5PY4KG7FR-v1fLUE6mU1DeABcbhqz4~A4KQSCx927RX9~RdPEvgBDIXuGNpYSLkqaFrSMyjqEUxuZZrgY2-7mr-sCyFtCaGVEoNwdyn6iuxNDv9sH~CoIGLfRSpyiGQsxAFkIz5HJ3JcjxjU~4HhTEy08Qe2Nu6m1448Rolc-x60vOznNyQ__" alt=""/>
-                <img class="img2" src="https://s3-alpha-sig.figma.com/img/41a5/d1b4/b7f624bcdc06bbc3cd05cc0bb3911054?Expires=1719187200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=NOCXAJpao4HohoJnEUV5HLPaHnuTAH-6BuD8RkNYctLWWTwwqtgWfzrcKh1narKNlVI96mY11rP0RmRptr9l9nxpvIX5DxBG4hfFPa1xmwKczguAwrR6g34W2P-A~s9YhJLTYFAcN9xhhIQr3HnEScK~xDlAtQy6zhAyzSO1zp8Wpnv6A-12ULbkc7saNHA1OxQuP8T63Nl-2rsmlmRSXxA-3m5j~n1-L8OEQJU-xJ7YNSW-gcbQ26sWAzG6J55D3d5JaHAsq5tQs7YtK4DRtNLxUc8cO1t9qNRnbb6T2TNIjuy~Zbwk~7NARaoERCjaJnNF0dg~FHtZVy2Fzyp3xQ__" alt=""/>
-                <img class="img3" src="https://s3-alpha-sig.figma.com/img/62d9/86ca/7652b113a790e43043f47f6700c78012?Expires=1719187200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=TtevAR1a6NqkK1uDn0GfCJs7S3yqJwktWny04Su-~9P-Z-PNHsVgJ3MJBw4JBzx2BfyhvMAMSlAdtKoP1cg-gkDKTeXmXH57A6aWVrfU46MZBjSAfcCHbc7v3lBaWpBJcOwhh2ligCrF7rFjv7xwYIoDrDwr1WXlpxIcfPg2Dkqc-gO~T7OBgAnVUXJFFdOVfObtkvnDoJ0zMKS0C~7HyTDP~wEsa1wMx3JyazLlZey7KQhC-qKPZhNE1ViCurtBgltJ1AS4kJshCPfEqD-fyb4n6owlkuhxyyUYb4XTq0~jgm1oSGTgTQ1jeSzI6ya54vaMeO0np~5hifZQrlBdjg__" alt=""/>
-                <img class="img4" src="https://s3-alpha-sig.figma.com/img/9947/0a4e/2249fd734f2bc408fdc5ff9976554ef6?Expires=1719187200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=pBO3INPDniMV7emeEf6PDRpRKTVz62tGSHPFxpbBAmzi6HHMgMSsJ6g3SDRsSJElSyT~XxK4TJZSYBrAor4HowdFRNfHVBUKTxiDztwVuuX5HrCJ6KWihhKFWjrk4kXaoJiNSch8tvc8QiJdhMY4hqXoBezxGRy4mhj-BdHTFx7uva80kZobXxtRaPbZVTD12lxldlB23BvIb51nZvvoc9sxg4Obp3OyyA1tFTvNHAxaCcqOocWHov8Og7Di5OvLutAFh1rL~VrMR6YhR7H9vqRsnen2GtdG3W7oSnUxlHcaBkhr2R8i7HlJ2Z~576M2Nqjv22Cii5hFtvS5MvvHrQ__" alt=""/>
+                <img class="img1" src="images/image1.png" alt=""/>
+                <img class="img2" src="images/image2.png" alt=""/>
+                <img class="img3" src="images/image3.png" alt=""/>
+                <img class="img4" src="images/image4.png" alt=""/>
             </section>
         </main>
     </div>
